5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1573_1328.log
== SUBMITION (2019-03-11 15:21:42) 
-- CODE:
print9(35*20)
-- EXECUTION TIME:
0.132155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1328/main.py", line 1, in <module>
    print9(35*20)
NameError: name 'print9' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:52) 
-- CODE:
print9(35*20)
-- EXECUTION TIME:
0.110146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1328/main.py", line 1, in <module>
    print9(35*20)
NameError: name 'print9' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:01) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.28088
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
